--- a/package.json
+++ b/package.json
@@ -2,8 +2,26 @@
   "name": "fastify-siwe",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/cjs/src/siwe.js",
+  "module": "dist/esm/src/siwe.js",
+  "types": "dist/esm/src/siwe.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/cjs/src/siwe.js",
+      "import": "./dist/esm/src/siwe.js",
+      "default": "./dist/esm/src/siwe.js",
+      "types": "./dist/esm/src/siwe.d.ts"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
+    "@fastify/session": "^8.1.0",
+    "@prisma/client": "^3.12.0",
+    "fastify": "^3.28.0",
+    "fastify-cookie": "^5.6.1",
+    "fastify-plugin": "^3.0.1",
     "siwe": "^1.1.6"
   },
   "devDependencies": {
@@ -19,11 +37,10 @@
     "build": "pnpm run build:esm && pnpm run build:cjs",
     "build:esm": "tsc --module es2020 --target es2017 --outDir dist/esm",
     "build:cjs": "tsc --outDir dist/cjs",
-    "test": "true",
     "lint": "pnpm lint:prettier --check && pnpm lint:eslint",
     "lint:fix": "pnpm lint:prettier --write && pnpm lint:eslint --fix",
-    "lint:eslint": "eslint './{src,test}/**/*.{ts,tsx}'",
-    "lint:prettier": "pnpm prettier './{src,test}/**/*.{ts,tsx}'"
+    "lint:eslint": "eslint './src/*.{ts,tsx}'",
+    "lint:prettier": "pnpm prettier './src/*.{ts,tsx}'"
   },
   "repository": {
     "type": "git",
