--- a/packages/fastify-siwe/package.json
+++ b/packages/fastify-siwe/package.json
@@ -11,11 +11,18 @@
     "type": "git",
     "url": "git@github.com:vanruch/fastify-siwe.git"
   },
-  "keywords": ["fastify", "Sign in with Ethereum", "siwe", "ethereum", "auth"],
+  "keywords": [
+    "fastify",
+    "Sign in with Ethereum",
+    "siwe",
+    "ethereum",
+    "auth"
+  ],
   "scripts": {
     "build": "tsc"
   },
   "dependencies": {
+    "ethers": "5.5.1",
     "fastify-plugin": "^3.0.1",
     "siwe": "^1.1.6"
   },
