Specify PNPM version for heroku

--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -15,3 +15,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "fastify-siwe-example-backend"
           heroku_email: "przemyslaw.rzad@trusttoken.com"
+        env:
+          PNPM_VERSION: 7.1.9
