--- a/packages/fastify-siwe/package.json
+++ b/packages/fastify-siwe/package.json
@@ -25,14 +25,17 @@
   "dependencies": {
     "ethers": "5.5.1",
     "fastify-plugin": "^3.0.1",
-    "siwe": "^2.0.5"
+    "siwe": "2.0.3"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.25",
     "chai": "^4.3.6",
+    "ethereum-waffle": "4.0.0-alpha.27",
     "fastify": "^3.28.0",
+    "jsdom": "^20.0.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.3"
