--- a/packages/fastify-siwe/package.json
+++ b/packages/fastify-siwe/package.json
@@ -24,16 +24,17 @@
   },
   "dependencies": {
     "ethers": "5.5.1",
-    "fastify-plugin": "^3.0.1",
+    "fastify-plugin": "4.0.0",
     "siwe": "2.0.5"
   },
   "devDependencies": {
+    "@fastify/cookie": "^7.2.0",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.25",
     "chai": "^4.3.6",
     "ethereum-waffle": "4.0.0-alpha.27",
-    "fastify": "^3.28.0",
+    "fastify": "4.2.1",
     "jsdom": "^20.0.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^10.0.0",
