--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "fastify-siwe-monorepo",
   "version": "0.0.1",
   "scripts": {
-    "build": "pnpm run -r build"
+    "build": "pnpm run -r build",
+    "test": "pnpm run -r test",
+    "lint": "pnpm run -r lint",
+    "lint:fix": "pnpm run -r lint:fix"
   },
   "author": "truefieng",
   "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {},
   "engines": {
     "node": "16.x"
+  },
+  "devDependencies": {
+    "eslint-plugin-no-only-tests": "^3.0.0"
   }
 }
