--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
     "@typescript-eslint/no-floating-promises": "off",
     "no-redeclare": "off",
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": ["warn"],
+    "@typescript-eslint/no-unused-vars": ["error"],
     "prefer-const": ["error", { "destructuring": "all" }],
     "semi": ["error", "never"],
     "no-extra-semi": "off",
