--- a/packages/fastify-siwe/package.json
+++ b/packages/fastify-siwe/package.json
@@ -34,11 +34,13 @@
   "devDependencies": {
     "@fastify/cookie": "^7.2.0",
     "@types/chai": "^4.3.1",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^8.20.0",
     "ethereum-waffle": "4.0.0-alpha.27",
     "fastify": "4.2.1",
