--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,7 @@
   "rules": {
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/no-floating-promises": "off",
+    "@typescript-eslint/no-floating-promises": "error",
     "no-redeclare": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": ["error"],
