--- a/packages/fastify-siwe/package.json
+++ b/packages/fastify-siwe/package.json
@@ -28,21 +28,22 @@
   },
   "dependencies": {
     "ethers": "5.5.1",
-    "fastify-plugin": "^3.0.1",
+    "fastify-plugin": "4.0.0",
     "siwe": "2.0.5"
   },
   "devDependencies": {
+    "@fastify/cookie": "^7.2.0",
     "@types/chai": "^4.3.1",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.25",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^8.20.0",
     "ethereum-waffle": "4.0.0-alpha.27",
-    "fastify": "^3.28.0",
-    "jsdom": "^20.0.0",
-    "jsdom-global": "^3.0.2",
+    "fastify": "4.2.1",
     "mocha": "^10.0.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
